⚡many things added user auth and all

--- a/Backend/.env
+++ b/Backend/.env
@@ -4,4 +4,5 @@ JWT_SECRET=your_secret_key
 FRONTEND_URL=http://localhost:5173
 EMAIL_PASS=gzbw crew cdln dikl
 EMAIL_USER=ramakrushnabunty@gmail.com
-
+GITHUB_CLIENT_ID=Ov23liFav0VqGmy1kCo6
+GITHUB_CLIENT_SECRET=97857db1f5eb90766fa1f5b3a757ba4890a680a3
