--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "html2canvas": "^1.4.1",
     "qrcode": "^1.5.4",
