--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
-    "html2canvas": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
