--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,10 +13,14 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "gsap": "^3.13.0",
     "jwt-decode": "^4.0.0",
+    "motion": "^12.23.6",
+    "ogl": "^1.0.11",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
